--- a/new-vector-whitespace.user.css
+++ b/new-vector-whitespace.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 whitespace and tweaks
 @namespace   StylishThemes
-@version     1.0.90
+@version     1.0.91
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
 @license     CC-BY-SA-4.0
@@ -112,6 +112,8 @@ domain("patchdemo.wmflabs.org") {
   min-width: unset !important;
 }
 
+  /* ------------------------------------------------------------------ */
+  /* ------------------------------------------------------------------ */
 /* 2. Custom Sticky Header and Page Tools */
 /* Reduces original sticky header to article links (talk, history, watch, edit).
    Force mw-header to be sticky, plus show the page-tool-sticky-buttons below */   
@@ -122,9 +124,10 @@ domain("patchdemo.wmflabs.org") {
   background: white; 
   width: 98%;
   top: 0;
-  left: 12px;
+  left: 0;
   padding: 0;
   z-index: 10 !important;
+  padding-left: 16px;
 }
 /* Nudge content down to account for no-default gap */
 @media screen and (max-width: 999px) {
@@ -217,7 +220,7 @@ html {
 .mw-header {
   margin: 0 !important;
   padding-top: 0;
-  height: 55px !important;
+  height: 54px !important;
 }
   
 /* Nudge sidebar-button up into corner */
@@ -252,7 +255,18 @@ html {
   margin: 0;
 }
 
+  /* ------------------------------------------------------------------ */
+  /* ------------------------------------------------------------------ */
 /* 3. ToC tweaks */
+
+/* Smaller "Contents" and "hide" */
+.vector-pinnable-header-label {
+  font-size: 11px !important;
+}
+.vector-pinnable-header-toggle-button {
+  font-size: 9px !important;
+}
+
 /* Change "Beginning" to an Up-arrow */
 #toc-mw-content-text div {
   visibility: hidden;
@@ -262,7 +276,7 @@ html {
   content: "🠕";
   display: block;
   position: absolute;
-  top: 2px;
+  top: 6px;
 }
 /* Auto-expand sections, and hide the H2-arrows */
 .client-js .vector-toc .vector-toc-level-1 .vector-toc-list-item {
@@ -271,20 +285,29 @@ html {
 .vector-toc-toggle {
   visibility: hidden;
 }
+
+/* ?! 
 .vector-toc {
   padding-left: 15px !important; 
+} 
+*/
+
+/* Don't bold the H2/3/4 or change the widths */
+.vector-toc-level-2, 
+.vector-toc-level-3,
+.vector-toc-level-4 {
+  font-weight: normal !important;
 }
 /* Bold the H1s */
-.vector-toc-level-1 {
-  font-weight: 600;
+.vector-toc-level-1,
+.vector-toc-list-item .vector-toc-level-1 .vector-toc-list-item-expanded .vector-toc-level-1-active > .vector-toc-link,
+.vector-toc-list-item .vector-toc-level-1 .vector-toc-list-item-expanded .vector-toc-level-1-active .vector-toc-list-item-active {
+  font-weight: 600 !important;
 }
-/* Don't bold the H2/3/4 or change the widths */
-.vector-toc-level-2 {
-  font-weight: normal;
-}
+
 /* Fix the bouncing from bold */
 .vector-toc .vector-toc-list-item-active > .vector-toc-link {
-  font-weight: unset;
+  font-weight: unset !important;
   width: unset;
 }
 .vector-toc .vector-toc-level-1-active:not(.vector-toc-list-item-expanded) > .vector-toc-link .vector-toc-text {
@@ -293,13 +316,10 @@ html {
 .vector-toc .vector-toc-list-item-active > .vector-toc-link .vector-toc-text, .vector-toc .vector-toc-level-1-active:not(.vector-toc-list-item-expanded) > .vector-toc-link .vector-toc-text, .vector-toc .vector-toc-list-item-active.vector-toc-level-1-active > .vector-toc-link .vector-toc-text {
   width: unset;
 }
-/* Smaller "Contents" */
-.vector-pinnable-header-label {
-  font-size: 12px !important;
+.vector-feature-zebra-design-disabled .vector-toc .vector-toc-list-item-active > .vector-toc-link .vector-toc-text {
+  width: unset;
 }
-.vector-pinnable-header-toggle-button {
-  font-size: 11px !important;
-}
+
 /* Add border  --- TEST REMOVAL
 @media screen and (min-width: 1000px) {
   .vector-toc {
@@ -328,13 +348,16 @@ html {
 .vector-feature-zebra-design-disabled.client-js.vector-sticky-header-enabled.vector-feature-toc-pinned-enabled #vector-toc-pinned-container, 
 .client-js.vector-sticky-header-enabled.vector-feature-toc-pinned-enabled #vector-toc-pinned-container,
 .vector-feature-toc-pinned-enabled #vector-toc-pinned-container {
-  top: 60px !important;
+  top: 55px !important;
 }
 .vector-feature-page-tools-enabled #vector-toc-pinned-container .vector-toc {
   padding-top: 0 !important;
 }
 .vector-feature-page-tools-enabled.vector-feature-main-menu-pinned-disabled.vector-feature-toc-pinned-enabled #vector-toc-pinned-container, .vector-feature-toc-pinned-enabled #vector-toc-pinned-container, .vector-feature-main-menu-pinned-disabled.vector-feature-toc-pinned-enabled #vector-toc-pinned-container {
   margin-top: 0 !important;
+}
+#mw-panel-toc {
+  margin-top: -13px
 }
 
 /* ToC other?? */
@@ -345,18 +368,15 @@ html {
 .vector-toc-enabled .sidebar-toc {
   width: 14em !important;
 }
-.vector-toc .vector-toc-text {
-  padding-right: 0;
-}
 /*
 .vector-toc-contents {
   width: 12.5em;
 } 
-*/
+
 .vector-feature-limited-width-disabled .mw-table-of-contents-container, 
 .vector-toc-pinned-container {
   margin-left: -2.5em !important;
-}
+}*/
 .vector-feature-page-tools-disabled .vector-main-menu {
   padding: 10px !important;
 }
@@ -365,8 +385,9 @@ html {
 }
 /* Oversize ToC experiment */
 .vector-feature-page-tools-disabled #vector-toc-pinned-container .vector-toc, .vector-feature-limited-width-disabled .mw-table-of-contents-container {
-  min-width: 250px !important;
+  min-width: 242px !important;
 }
+
 /* Remove the gradient fade */
 .vector-feature-zebra-design-disabled #vector-toc-pinned-container .vector-toc::after {
   background: none;
@@ -393,7 +414,8 @@ html {
 
 /* Reduce ToC height for logged-out view */
 #vector-toc {
-  height: 90vh;
+  height: 89vh !important;
+  max-height: 89vh !important;
 }
 
 /* TOC-button nudge
@@ -422,6 +444,8 @@ html {
 */
 
 
+  /* ------------------------------------------------------------------ */
+  /* ------------------------------------------------------------------ */
 /* 4. Sidebar tweaks */
 #mw-panel {
   padding: 0;
@@ -467,6 +491,8 @@ html {
   width: 170px;
 }
   
+  /* ------------------------------------------------------------------ */
+  /* ------------------------------------------------------------------ */
 /* 5. General whitespace reductions */
 
 /* Reduce gap above Page-title */
@@ -565,16 +591,28 @@ html {
   min-width: 0;
   margin-right: 10px;
 }
+
+/* Reduce gap beside searchbox */
+#p-search {
+  margin-left: -5px;
+}
+/* Old attempt */
+/* 
 .cdx-typeahead-search .cdx-typeahead-search--show-thumbnail .cdx-typeahead-search--auto-expand-width {
   padding-left: 20px;
   margin-left: 20px;
 }
+*/
 
 /* Fix search-results flyout at small widths */
 #cdx-typeahead-search-menu-0 {
   min-width: 250px;
 }
 
+/* Add a touch of whitespace next to body for darkmode */
+#bodyContent {
+  padding-left: 5px;
+}
 
 /* Replace section-edit links with icons
 .mw-editsection-visualeditor {
