--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.0.95
+@version     1.0.96
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -205,6 +205,7 @@ domain("patchdemo.wmflabs.org") {
     padding: 2px 4px;
     border: 1px solid gray;
     border-top: unset;
+    margin-left: -5px;
   }
 
 }
