fix for pinned page-tools

--- a/new-vector-fixed-pagetools.user.css
+++ b/new-vector-fixed-pagetools.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Fixed Page Toolbar
 @namespace   StylishThemes
-@version     1.0.05
+@version     1.0.06
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-fixed-pagetools.user.css
 @license     CC-BY-SA-4.0
@@ -177,8 +177,17 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
   .vector-feature-zebra-design-disabled .mw-body .vector-page-toolbar {
     border-bottom: 1px solid #a2a9b1 !important;
   }
-
   .vector-page-toolbar-container {
     box-shadow: unset;
   }
+  
+  /* Stop the pinned page-tools menu from jumping on scroll */
+  .vector-feature-zebra-design-disabled #vector-page-tools-pinned-container .vector-page-tools {
+    padding-top: unset;
+  }
+  .vector-feature-zebra-design-disabled.client-js.vector-sticky-header-enabled.vector-feature-page-tools-pinned-enabled .vector-page-tools-landmark {
+    top: 85px !important;
+    margin-top: -10px;
+  }
+
 }
