--- a/new-vector-fixed-pagetools.user.css
+++ b/new-vector-fixed-pagetools.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Fixed Page Toolbar
 @namespace   StylishThemes
-@version     1.0.06
+@version     1.0.07
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-fixed-pagetools.user.css
 @license     CC-BY-SA-4.0
@@ -34,11 +34,12 @@ domain("wikifunctions.org") {
 .vector-sticky-header-end {
   display: none !important;
 }
-  
+
 /* Sticky the page-toolbar, and adjust its width (TODO: Fix imperfect width...) */
-.vector-page-toolbar, .vector-feature-zebra-design-disabled .mw-body .vector-page-toolbar  {
+.vector-page-toolbar, 
+.vector-feature-zebra-design-disabled .mw-body .vector-page-toolbar  {
   position: fixed !important; 
-  top: 52px; 
+  top: 55px; 
   background-color: white; 
   z-index: 1 !important;
   padding-right: 300px;
@@ -54,14 +55,14 @@ domain("wikifunctions.org") {
     width: 95vw; left: 10px;
   }
 }
-  
+
 /* Still show it in thinner windows */
 @media screen and (min-width: 300px) {
   .vector-page-toolbar .mw-portlet-views:not(.emptyPortlet) {
     display: block;
   }
 }
-  
+
 /* Move button for ToC-collapsed down below the sticky-header */
 .client-js .vector-below-page-title .vector-page-titlebar-toc {
   top: 81px !important;
@@ -69,18 +70,7 @@ domain("wikifunctions.org") {
 html {
   scroll-padding-top: 120px !important;
 }
-  
-/* Fix for VE toolbar */
-body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar {
-  top: 76px;
-}
-  
-/* Fix for overlapping hidden div, otherwise interferes w/ VE */
-#p-views,
-#p-views .vector-menu-content {
-  max-height: 20px;
-}
-  
+
 /* Nudge content down to account for no-default gap */
 .vector-feature-zebra-design-disabled .mw-content-container,
 .mw-content-container {
@@ -94,7 +84,26 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
     margin-top: 10px !important;
   }
 }
-  
+
+/* Fix for VE toolbar */
+body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar {
+  top: 76px;
+}
+
+/* Fix for overlapping hidden div, otherwise interferes w/ VE */
+#p-views,
+#p-views .vector-menu-content {
+  max-height: 20px;
+}
+
+/* Fix for sticky table-header gadgets */
+.jquery-tablesorter > thead,
+.mw-sticky-header > thead {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 80px !important;
+}
+
 /* Fix overlap of personal-tools */
 #vector-user-links-dropdown .vector-menu-content {
   top: 40px;
@@ -102,12 +111,12 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
 .mw-page-container {
   z-index: unset !important;
 }
-  
+
 /* Nudge "new talk" down */
 #pt-talk-alert {
   top: 65px !important;
 }
-  
+
 /* Remove bottom-border */
 .vector-feature-zebra-design-disabled .vector-sticky-header-container {
   border-bottom: unset;
@@ -122,9 +131,30 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
 .vector-feature-zebra-design-disabled.client-js.vector-sticky-header-enabled .mw-sticky-header-element {
   top: 80px !important;
 }
-  
+
+/* Stop the pinned page-tools menu from jumping on scroll */
+.vector-feature-zebra-design-disabled #vector-page-tools-pinned-container .vector-page-tools {
+  padding-top: unset;
+}
+.vector-feature-zebra-design-disabled.client-js.vector-sticky-header-enabled.vector-feature-page-tools-pinned-enabled .vector-page-tools-landmark {
+  top: 85px !important;
+  margin-top: -10px;
+}
+
+/* Color borders */
+.mw-header {
+  border-bottom: 1px solid #a2a9b1 !important;
+}
+.vector-page-toolbar, 
+.vector-feature-zebra-design-disabled .mw-body .vector-page-toolbar {
+  border-bottom: 1px solid #a2a9b1 !important;
+}
+.vector-page-toolbar-container {
+  box-shadow: unset;
+}
+
 /* Replace toolbar text with icons at small widths */
-@media screen and (max-width: 725px) {
+@media screen and (max-width: 699px) {
   #ca-addsection {
     -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-alerts&image=speechBubbleAdd&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-alerts&image=speechBubbleAdd&format=original) no-repeat 0 0/15px; background-color: black; padding: 10px; width: 10px; font-size: 1px; color: white; text-decoration: none;
   }
@@ -168,26 +198,5 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
     margin-top: -3px !important;
   }
 }
-  
-  /* Color borders */
-  .mw-header {
-    border-bottom: 1px solid #a2a9b1 !important;
-  }
-  .vector-page-toolbar, 
-  .vector-feature-zebra-design-disabled .mw-body .vector-page-toolbar {
-    border-bottom: 1px solid #a2a9b1 !important;
-  }
-  .vector-page-toolbar-container {
-    box-shadow: unset;
-  }
-  
-  /* Stop the pinned page-tools menu from jumping on scroll */
-  .vector-feature-zebra-design-disabled #vector-page-tools-pinned-container .vector-page-tools {
-    padding-top: unset;
-  }
-  .vector-feature-zebra-design-disabled.client-js.vector-sticky-header-enabled.vector-feature-page-tools-pinned-enabled .vector-page-tools-landmark {
-    top: 85px !important;
-    margin-top: -10px;
-  }
 
 }
