fix border, tweak grey

--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.02
+@version     1.1.03
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -157,7 +157,7 @@ domain("patchdemo.wmflabs.org") {
   
   /* Grey Sticky Headers - Duplicated in Grey-test/Quiddity  */
   .mw-header {
-    background-color: #eaecf0 !important;
+    background-color: #f8f9fa !important; /* or a bit darker: #eaecf0 */
     border-bottom: 1px solid #a2a9b1 !important;
   }
   .vector-page-toolbar, 
@@ -168,7 +168,7 @@ domain("patchdemo.wmflabs.org") {
   #p-associated-pages {
     background-color: #f8f9fa !important;
     border-left: 1px solid #a2a9b1 !important;
-    padding-bottom: 1px;
+    padding-bottom: 0;
     border-bottom: 1px solid #a2a9b1 !important;
   }
   .vector-page-toolbar-container {
