--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.05
+@version     1.1.06
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -30,8 +30,9 @@ domain("beta.wmflabs.org"),
 domain("wikifunctions.org"),
 domain("vrt-wiki.wikimedia.org"),
 domain("patchdemo.wmflabs.org") {
-  /* Stop Menus jumping on page load */
-  @import url('https://meta.wikimedia.org/w/index.php?title=MediaWiki:Gadget-MoreMenu-pagestyles.en.css&action=raw&ctype=text/css'); 
+  /* Stop Menus jumping on page load
+  @import url('https://meta.wikimedia.org/w/index.php?title=MediaWiki:Gadget-MoreMenu-pagestyles.en.css&action=raw&ctype=text/css');  
+  */
   /* also prevent that from moving the bottom border */
   .vector-page-toolbar-container {max-height: 27px;}
   
@@ -185,5 +186,11 @@ domain("patchdemo.wmflabs.org") {
     padding-left: 15px;
     border-left: 1px solid #a2a9b1 */
   }
-
+  
+/* TESTS
+  .timeline-wrapper, .wikitable {width: calc(100vw - 350px) !important;}
+  .timeline-wrapper {max-width: none;} */
+  .vector-feature-zebra-design-disabled .mw-page-container {margin: 0;}
+  
+ .CategoryTreeItem > span[title="Contains 0 subcategories, 0 pages, and 0 files"] {opacity: 0.2;}
 }
