--- a/new-vector-whitespace.user.css
+++ b/new-vector-whitespace.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 whitespace and tweaks
 @namespace   StylishThemes
-@version     1.0.99
+@version     1.1.01
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
 @license     CC-BY-SA-4.0
@@ -687,5 +687,12 @@ html.vector-feature-zebra-design-enabled {
 }
 .vector-feature-zebra-design-enabled .vector-page-toolbar {
   top: 54px;
+}
+
+/* Fixes for mobile-size */
+@media screen and (max-width: 500px) {
+  .vector-feature-zebra-design-disabled .mw-page-container {
+    padding: 0 12px 0 2px;
+  }
 }
 }
