--- a/new-vector-whitespace.user.css
+++ b/new-vector-whitespace.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 whitespace and tweaks
 @namespace   StylishThemes
-@version     1.1.03
+@version     1.1.04
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
 @license     CC-BY-SA-4.0
@@ -693,6 +693,9 @@ html.vector-feature-zebra-design-enabled {
 @media screen and (max-width: 550px) {
   .vector-feature-zebra-design-disabled .mw-page-container {
     padding: 0 12px 0 2px;
+  }
+  .mw-header {
+    max-width: 100vw;
   }
 }
 }
